[gd_scene load_steps=4 format=3 uid="uid://dlgmqilr5i5k5"]

[ext_resource type="Script" path="res://SCRIPTS/Lobby.gd" id="1_7x71h"]
[ext_resource type="Script" path="res://SCENES/LOBBY/lobby_name.gd" id="2_6oxin"]
[ext_resource type="PackedScene" uid="uid://b8raeg7ui665l" path="res://SCENES/LOBBY/controller_lobby.tscn" id="3_5adrr"]

[node name="Lobby" type="Node2D" node_paths=PackedStringArray("JOIN_BUTTON", "HOST_BUTTON", "MessageLabel", "NameArea")]
script = ExtResource("1_7x71h")
JOIN_BUTTON = NodePath("Control/JOIN")
HOST_BUTTON = NodePath("Control/HOST")
MessageLabel = NodePath("Control/RichTextLabel")
NameArea = NodePath("Control/All_Players")
ControllerLobbyPrefab = ExtResource("3_5adrr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="HOST" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -58.0
offset_right = 22.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "HOST"

[node name="JOIN" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -15.5
offset_right = 21.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "JOIN"

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 32.0
offset_right = 37.5625
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 399.0
offset_top = 198.0
offset_right = 740.0
offset_bottom = 238.0
text = "CONNECTING"

[node name="All_Players" type="BoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 251.0

[node name="KeyboardLobby" type="Control" parent="Control/All_Players"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
script = ExtResource("2_6oxin")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/All_Players/KeyboardLobby"]
layout_mode = 0
offset_right = 130.0
offset_bottom = 40.0
text = "Keyboard Name"

[node name="LineEdit" type="LineEdit" parent="Control/All_Players/KeyboardLobby"]
layout_mode = 0
offset_left = -1.0
offset_top = 28.0
offset_right = 121.0
offset_bottom = 59.0

[connection signal="button_down" from="Control/HOST" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Control/JOIN" to="." method="_on_join_button_down"]
[connection signal="text_changed" from="Control/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="Control/All_Players/KeyboardLobby/LineEdit" to="Control/All_Players/KeyboardLobby" method="_on_line_edit_text_changed"]
